--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
     <input name="City" type ="Text" autofocus="true" class="form-input" />
     <button data-language="javascript">Go</button>
 </body>
+<script
+type="text/javascript"
+src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+></script>
+<script
+src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+crossorigin="anonymous"
+></script>
 <script src="assets/script.js"></script>
 </html>
