Updated HTML title

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h2>Select City</h2>
     <input name="City" type ="Text" autofocus="true" class="form-input" />
-    <button data-language="javascript">Go</button>
+    <button id="button-go" data-language="javascript">Go</button>
 </body>
 <script
 type="text/javascript"
